--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             }
             .winnername {
                 background-color: #ffd800;
-                font-family: "Pacifico", cursive;
+                font-family: "Roboto", sans-serif;
                 font-weight: 500;
-                font-size: 40px;
+                font-size: 20px;
                 border: 2px solid #fa9747;
                 border-radius: 10px;
                 margin-bottom: 0px;
@@ -116,11 +116,11 @@
                                                     <h1 id="winnertext1" class="display-4 winnerno">0000</h1>
                                                 </div>
                                             </div>
-                                            <!-- <div class="row">
+                                            <div class="row">
                                                 <div class="col form-group input-group-lg">
                                                     <h1 id="winnertextName1" class="display-4 winnername"></h1>
                                                 </div>
-                                            </div> -->
+                                            </div>
                                             <div class="row">
                                                 <div class="col form-group">
                                                     <button
@@ -169,6 +169,11 @@
                                                 </div>
                                             </div>
                                             <div class="row">
+                                                <div class="col form-group input-group-lg">
+                                                    <h1 id="winnertextName2" class="display-4 winnername"></h1>
+                                                </div>
+                                            </div>
+                                            <div class="row">
                                                 <div class="col form-group">
                                                     <button
                                                         id="btn2"
@@ -211,6 +216,11 @@
                                             <div class="row">
                                                 <div class="col form-group input-group-lg">
                                                     <h1 id="winnertext3" class="display-4 winnerno">0000</h1>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col form-group input-group-lg">
+                                                    <h1 id="winnertextName3" class="display-4 winnername"></h1>
                                                 </div>
                                             </div>
                                             <div class="row">
@@ -261,6 +271,11 @@
                                                 </div>
                                             </div>
                                             <div class="row">
+                                                <div class="col form-group input-group-lg">
+                                                    <h1 id="winnertextName4" class="display-4 winnername"></h1>
+                                                </div>
+                                            </div>
+                                            <div class="row">
                                                 <div class="col form-group">
                                                     <button
                                                         id="btn4"
@@ -303,6 +318,11 @@
                                             <div class="row">
                                                 <div class="col form-group input-group-lg">
                                                     <h1 id="winnertext5" class="display-4 winnerno">0000</h1>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col form-group input-group-lg">
+                                                    <h1 id="winnertextName5" class="display-4 winnername"></h1>
                                                 </div>
                                             </div>
                                             <div class="row">
@@ -351,6 +371,11 @@
                                                 </div>
                                             </div>
                                             <div class="row">
+                                                <div class="col form-group input-group-lg">
+                                                    <h1 id="winnertextName6" class="display-4 winnername"></h1>
+                                                </div>
+                                            </div>
+                                            <div class="row">
                                                 <div class="col form-group">
                                                     <button
                                                         id="btn6"
@@ -396,6 +421,11 @@
                                                 </div>
                                             </div>
                                             <div class="row">
+                                                <div class="col form-group input-group-lg">
+                                                    <h1 id="winnertextName7" class="display-4 winnername"></h1>
+                                                </div>
+                                            </div>
+                                            <div class="row">
                                                 <div class="col form-group">
                                                     <button
                                                         id="btn7"
@@ -438,6 +468,11 @@
                                             <div class="row">
                                                 <div class="col form-group input-group-lg">
                                                     <h1 id="winnertext8" class="display-4 winnerno">0000</h1>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col form-group input-group-lg">
+                                                    <h1 id="winnertextName8" class="display-4 winnername"></h1>
                                                 </div>
                                             </div>
                                             <div class="row">
@@ -488,6 +523,11 @@
                                                 </div>
                                             </div>
                                             <div class="row">
+                                                <div class="col form-group input-group-lg">
+                                                    <h1 id="winnertextName9" class="display-4 winnername"></h1>
+                                                </div>
+                                            </div>
+                                            <div class="row">
                                                 <div class="col form-group">
                                                     <button
                                                         id="btn9"
@@ -530,6 +570,11 @@
                                             <div class="row">
                                                 <div class="col form-group input-group-lg">
                                                     <h1 id="winnertext10" class="display-4 winnerno">0000</h1>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col form-group input-group-lg">
+                                                    <h1 id="winnertextName10" class="display-4 winnername"></h1>
                                                 </div>
                                             </div>
                                             <div class="row">
@@ -578,6 +623,11 @@
                                                 </div>
                                             </div>
                                             <div class="row">
+                                                <div class="col form-group input-group-lg">
+                                                    <h1 id="winnertextName11" class="display-4 winnername"></h1>
+                                                </div>
+                                            </div>
+                                            <div class="row">
                                                 <div class="col form-group">
                                                     <button
                                                         id="btn11"
@@ -623,6 +673,11 @@
                                                 </div>
                                             </div>
                                             <div class="row">
+                                                <div class="col form-group input-group-lg">
+                                                    <h1 id="winnertextName12" class="display-4 winnername"></h1>
+                                                </div>
+                                            </div>
+                                            <div class="row">
                                                 <div class="col form-group">
                                                     <button
                                                         id="btn12"
@@ -665,6 +720,11 @@
                                             <div class="row">
                                                 <div class="col form-group input-group-lg">
                                                     <h1 id="winnertext13" class="display-4 winnerno">0000</h1>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col form-group input-group-lg">
+                                                    <h1 id="winnertextName13" class="display-4 winnername"></h1>
                                                 </div>
                                             </div>
                                             <div class="row">
@@ -751,14 +811,15 @@
                     var result = lines[randomRowIndex];
                     localStorage.setItem(prize, JSON.stringify(result));
 
-                    var drawing = 70000;
+                    var drawing = 100000;
                     var drawx = 0;
                     for (var i = 0; i < drawing; i++) {
                         setTimeout(function () {
                             var r = Math.floor(Math.random() * lines.length);
                             result = lines[r];
                             document.getElementById("winnertext" + prize).innerHTML = result.id;
-                            document.getElementById("btn" + prize).innerText = result.name;
+                            document.getElementById("winnertextName" + prize).innerHTML = result.name;
+                            //document.getElementById("btn" + prize).innerText = result.name;
                             drawx++;
                             if (drawx == drawing) {
                                 fillWinner();
@@ -783,11 +844,12 @@
                     for (let i = 1; i <= 13; i++) {
                         var winnerstored = JSON.parse(localStorage.getItem(i));
                         if (winnerstored) {
-                            document.getElementById("winnertext" + i).innerHTML = winnerstored.id;
-                            //document.getElementById("winnertextName" + i).innerHTML = winnerstored.name;
-                            document.getElementById("btn" + i).innerText = winnerstored.name;
+                            document.getElementById("winnertext" + i).innerHTML =
+                                winnerstored.id;
+                            document.getElementById("winnertextName" + i).innerHTML = winnerstored.name  + "<br />(" + winnerstored.group + ")";
+                            //document.getElementById("btn" + i).innerText = winnerstored.name;
                             document.getElementById("img" + i).src = "imgs/cup.png";
-                            document.getElementById("btn" + i).disabled = true;
+                            document.getElementById("btn" + i).disabled = false;
                         }
                     }
                 } else {
@@ -796,6 +858,7 @@
             }
 
             function fn(textboxno) {
+                document.getElementById("btn" + textboxno).disabled = true;
                 getRandomRow(textboxno);
                 //fillWinner();
 
@@ -819,10 +882,16 @@
                     document.getElementById("img5").src = "imgs/cup.png";
                 } */
 
-                if (textboxno == 1) {
+                if (textboxno == 1 || textboxno == 2 || textboxno == 3) {
                     audio = new Audio("audio/Champion.mp3");
+                } else if (textboxno > 3) {
+                    var au = Math.floor(Math.random() * 4) + 1;
+                    audio = new Audio("audio/Rotation-" + au + ".mp3");
                 }
                 audio.play();
+                setTimeout(function () {
+                    audio.pause();
+                }, 20000);
             }
             function reset() {
                 localStorage.clear();
